<package format="2">
  <name>interface_tester</name>
  <version>0.0.0</version>
  <description>interface_tester</description>
  <maintainer email="afourast@gmail.com">sanzoulapi</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_diagnostics/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_diagnostics</url>

  <author>Miltiadis Allamanis</author>
  <author>Afouras Triantafyllos</author>

  <buildtool_depend>catkin</buildtool_depend>

   <depend>roscpp</depend> 
   <depend>tf</depend> 

  <export>
  </export>
</package>
