<package format="2">
  <name>pandora_bounds_diagnostics</name>
  <version>0.0.0</version>
  <description>pandora_bounds_diagnostics</description>
  <maintainer email="afourast@gmail.com">Afouras Triantafyllos</maintainer> 

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_diagnostics/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_diagnostics</url>

  <author>Nikos Gountas</author>

  <buildtool_depend>catkin</buildtool_depend>

   <depend>roscpp</depend> 
   <depend>std_msgs</depend> 
   <depend>tf</depend>
   
  <export>

  </export>
</package>
