<package format="2">
  <name>pandora_diagnostics_launchers</name>
  <version>0.0.0</version>
  <description>pandora_diagnostics_launchers</description>
   <maintainer email="afourast@gmail.com">Afouras Triantafyllos</maintainer> 

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_diagnostics/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_diagnostics</url>

  <author>Miltiadis Allamanis</author>
  
   <depend>pr2_computer_monitor</depend> 
   <depend>pr2_msgs</depend> 
   <depend>diagnostic_aggregator</depend> 

  <export>
  </export>
</package>
