<package format="2">
  <name>pandora_interface_diagnostics</name>
  <version>0.0.0</version>
  <description>pandora_interface_diagnostics</description>
  <maintainer email="afourast@gmail.com">Afouras Triantafyllos</maintainer> 

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_diagnostics/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_diagnostics</url>

  <author>Nikos Gountas</author>
  <author>Afouras Triantafyllos</author>

  <buildtool_depend>catkin</buildtool_depend>
  
   <build_depend>cmake_modules</build_depend>
   
   <depend>roscpp</depend> 
   <depend>diagnostic_updater</depend> 
   <depend>state_manager</depend> 
   <depend>state_manager_msgs</depend> 
   <depend>interface_tester</depend> 
   <depend>tinyxml</depend> 

  <export>
  </export>
</package>
